<resources>
    <string name="app_name">My Modules</string>
    <string name="module1">C203 Web AppIn Development in php</string>
    <string name="module2">C235 IT security and management</string>
    <string name="module3">C218 UI/UX Design for Apps</string>
    <string name="module4">C206 Software Development Process</string>
    <string name="module5">C346 Mobile App Development</string>
</resources>