<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/module1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module1" />

    <TextView
        android:id="@+id/module2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module2" />

    <TextView
        android:id="@+id/module3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module3" />

    <TextView
        android:id="@+id/module4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module4" />

    <TextView
        android:id="@+id/module5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module5" />

</LinearLayout>